# lapped-image-codec

./: .gitignore  CMakeLists.txt  README.md  dct.hpp  imageDemo.cpp  imageReader.hpp  main.cpp  quantization.hpp  transform1d.hpp  transform2d.hpp
